[package]
name = "jsonlrpc_mio"
version = "0.1.0"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Non-blocking `jsonlrpc` server and client using `mio`"
homepage = "https://github.com/sile/jsonlrpc_mio"
repository = "https://github.com/sile/jsonlrpc_mio"
readme = "README.md"

[dependencies]
jsonlrpc = "0.2.0"
mio = { version = "1.0.2", default-features=false, features = ["os-poll", "net"] }
serde = "1.0.214"
serde_json = "1.0.132"

[dev-dependencies]
orfail = "1.1.0"
